--- a/dev.html
+++ b/dev.html
@@ -8,5 +8,7 @@
 <body>
     <h1>This is developer file</h1>
     <img src="https://media.istockphoto.com/id/1419410282/photo/silent-forest-in-spring-with-beautiful-bright-sun-rays.jpg?s=612x612&w=0&k=20&c=UHeb1pGOw6ozr6utsenXHhV19vW6oiPIxDqhKCS2Llk=" width="250" alt="This nature image">
+    <h1>Updated by tester</h1>
+    <img src="https://media.istockphoto.com/id/183412466/photo/eastern-bluebirds-male-and-female.jpg?s=612x612&w=0&k=20&c=6_EQHnGedwdjM9QTUF2c1ce7cC3XtlxvMPpU5HAouhc=">
 </body>
 </html>
